a better reference with fewer typos

--- a/reference.html
+++ b/reference.html
@@ -21,7 +21,7 @@
         
         <hr>
         <h2>Heading B</h2>
-        <img src="https://res.cloudinary.com/hrscywv4p/image/upload/c_limit,fl_lossy,h_300,w_300,f_auto,q_auto/v1/983693/axmqlpjyo3zmeszdr9qt.png" width=200>
+        <img src="https://res.cloudinary.com/hrscywv4p/image/upload/c_limit,fl_lossy,h_300,w_300,f_auto,q_auto/v1/983693/axmqlpjyo3zmeszdr9qt.png" width="200">
         
         <hr>
         <h2>Heading C</h2>
